fix compile issue

--- a/Dockerfile_airflow.yaml
+++ b/Dockerfile_airflow.yaml
@@ -1,6 +1,10 @@
 
 FROM apache/airflow:2.2.4-python3.8
 
+# FROM apache/airflow:2.5.1-python3.8
+
+# 4.2.0
+
 RUN pip install "apache-airflow-providers-http" --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-2.2.4/constraints-3.8.txt"
 
 
