--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -44,7 +44,8 @@ x-airflow-common:
   # In order to add custom dependencies or upgrade provider packages you can use your extended image.
   # Comment the image line, place your Dockerfile in the directory where you placed the docker-compose.yaml
   # and uncomment the "build" line below, Then run `docker-compose build` to build the images.
-  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.2.4}
+  image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.2.5} #2.3.4}
+  # image: ${AIRFLOW_IMAGE_NAME:-apache/airflow:2.5.1} 2.2.4 2.2.5 2.3.4 2.4.3 https://airflow.apache.org/docs/apache-airflow/stable/release_notes.html
   # build: .
   environment:
     &airflow-common-env
