--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -59,6 +59,7 @@ x-airflow-common:
     AIRFLOW__API__AUTH_BACKEND: 'airflow.api.auth.backend.basic_auth'
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
   volumes:
+    - ./dag:/home/airflow/.local/lib/python3.7/site-packages/airflow/example_dags
     - ./dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
     - ./zeppelin_provider:/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/apache/zeppelin
@@ -73,7 +74,8 @@ x-airflow-common:
 
 services:
   zeppelin:
-    image: apache/zeppelin:0.10.1
+    image: bochuxt/zepplin10spark:0.0.1
+    # apache/zeppelin:0.10.1
     restart: always
     environment:
       - SPARK_HOME=/opt/spark
@@ -87,15 +89,18 @@ services:
       - 8080
     ports:
       - "8085:8080"
+      - "4041:4041"
 
   postgres:
     image: postgres:13
+    ports:
+      - "5432:5432"    
     environment:
       POSTGRES_USER: airflow
       POSTGRES_PASSWORD: airflow
       POSTGRES_DB: airflow
-    volumes:
-      - postgres-db-volume:/var/lib/postgresql/data
+    # volumes:
+    #   - postgres-db-volume:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "airflow"]
       interval: 5s
@@ -106,6 +111,8 @@ services:
     image: redis:latest
     expose:
       - 6379
+    ports:
+      - "6379:6379"        
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 5s
@@ -267,7 +274,7 @@ services:
       - bash
       - -c
       - airflow
-
+  #Scaling Out with Celery
   flower:
     <<: *airflow-common
     command: celery flower
@@ -284,5 +291,5 @@ services:
       airflow-init:
         condition: service_completed_successfully
 
-volumes:
-  postgres-db-volume:
+# volumes:
+#   postgres-db-volume:
